--- a/eks-deploy-from-ecr.yaml
+++ b/eks-deploy-from-ecr.yaml
@@ -14,7 +14,8 @@ spec:
     spec:
       containers:
       - name: my-python-app
-        image: 211223789150.dkr.ecr.us-east-1.amazonaws.com/my-python-repo
+        image: 422723218561.dkr.ecr.us-east-1.amazonaws.com/mypythonecrrepo
+              
         imagePullPolicy: Always
         ports:
         - containerPort: 5000
