--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -64,7 +64,7 @@ jobs:
         # Inside the SSH session on the EC2 instance
         # Run your Docker commands here
         docker pull 422723218561.dkr.ecr.ap-south-1.amazonaws.com/githubaction:ffc347d90795f44059b65b845a73173857022c75
-        docker run -d 422723218561.dkr.ecr.ap-south-1.amazonaws.com/githubaction:ffc347d90795f44059b65b845a73173857022c75
+        docker run -d -p 5000:5000 422723218561.dkr.ecr.ap-south-1.amazonaws.com/githubaction:ffc347d90795f44059b65b845a73173857022c75
       env:
         SSH_PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
 
