--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -58,11 +58,23 @@ jobs:
     - name: Set up SSH key
       run: echo "$SSH_PRIVATE_KEY" > ssh_key.pem && chmod 600 ssh_key.pem
 
+
     - name: SSH into EC2
       run: |
         ssh -i ssh_key.pem ubuntu@172.31.12.187 << 'ENDSSH'
         # Inside the SSH session on the EC2 instance
         # Run your Docker commands here
+        
+    - name: Log in to Amazon ECR
+      run: |
+        aws ecr get-login-password --region ap-south-1 | docker login --username AWS --password-stdin 422723218561.dkr.ecr.ap-south-1.amazonaws.com/githubaction
+      env:
+        AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+        AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+
+    - name: Docker run
+      run: |
+        
         docker pull 422723218561.dkr.ecr.ap-south-1.amazonaws.com/githubaction:ffc347d90795f44059b65b845a73173857022c75
         docker run -d -p 5000:5000 422723218561.dkr.ecr.ap-south-1.amazonaws.com/githubaction:ffc347d90795f44059b65b845a73173857022c75
       env:
